Archive2/3c/846c0d529550cb/output
main.cpp:11:14: error: non-virtual member function marked 'override' hides virtual member function
    Y* f(X*) override { return nullptr; }
             ^
main.cpp:6:16: note: hidden overloaded virtual function 'interface::f' declared here: type mismatch at 1st parameter ('Y *' vs 'X *')
    virtual X* f(Y*) = 0;
               ^
1 error generated.
