Archive2/3c/846c0d529550cb/main.cpp
struct X{};
struct Y : X{};

struct interface
{
    virtual X* f(Y*) = 0;
};

struct impl : interface
{
    Y* f(X*) override { return nullptr; }
};

int main(){
}